--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,10 @@ script:
   - cmake ..
   - make
   - ./psychic-garbanzo test
+
+after_success:
+  -  bash <(curl -s https://codecov.io/bash)
+
+env:
+  - global:
+      - CODECOV_TOKEN="0a28721f-a7b6-456d-b158-92d54826fbff"
