--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 cmake-build-debug/
 .idea/
+build/
 # Created by https://www.gitignore.io/api/c++,cmake,clion
 # Edit at https://www.gitignore.io/?templates=c++,cmake,clion
 
