--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,9 +11,9 @@ find_package(GMP REQUIRED)
 
 add_executable(psychic-garbanzo src/main.cpp
         src/functions.cpp
-        include/functions.h include/includes.h include/typedefs.h
+        src/functions.h include/includes.h include/typedefs.h
         src/playground/playground.h src/playground/playground.cpp
-        libs/sha256/SHA256.cpp libs/sha256/SHA256.h )
+        libs/sha256/SHA256.cpp libs/sha256/SHA256.h src/merkleTree/MerkleTree.cpp src/merkleTree/MerkleTree.h src/block/BlockHeader.cpp src/block/BlockHeader.h src/transaction/Transaction.cpp src/transaction/Transaction.h)
 
 target_link_libraries(psychic-garbanzo gmp gmpxx)
 
@@ -30,10 +30,12 @@ if (BUILD_TESTS)
         enable_testing()
         add_executable(psychic-test test/functionsTest.cpp test/Sha256Test.cpp
                 src/functions.cpp
-                include/functions.h include/includes.h include/typedefs.h
+                src/functions.h include/includes.h include/typedefs.h
                 src/playground/playground.h src/playground/playground.cpp
                 libs/sha256/SHA256.cpp libs/sha256/SHA256.h
-                )
+                src/merkleTree/MerkleTree.cpp src/merkleTree/MerkleTree.h
+                src/block/BlockHeader.cpp src/block/BlockHeader.h
+                src/transaction/Transaction.cpp src/transaction/Transaction.h)
         target_link_libraries(psychic-test gmp gmpxx)
         if (CMAKE_BUILD_TYPE STREQUAL "Coverage")
                 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/libs/codeCoverage")
