--- a/codecov.yml
+++ b/codecov.yml
@@ -1,2 +1,8 @@
 ignore:
   - "libs"
+coverage:
+  status:
+    project:
+      default:
+        target: auto
+        threshold: 20% # For getters and setters tests...
