--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,10 @@ find_package(GMP REQUIRED)
 
 
 add_executable(psychic-garbanzo src/main.cpp
-        src/functions.cpp
-        src/functions.h include/includes.h include/typedefs.h
+        src/HelperFunctions.cpp
+        src/HelperFunctions.h include/includes.h include/typedefs.h
         src/playground/playground.h src/playground/playground.cpp
-        libs/sha256/SHA256.cpp libs/sha256/SHA256.h src/merkleTree/MerkleTree.cpp src/merkleTree/MerkleTree.h src/block/BlockHeader.cpp src/block/BlockHeader.h src/transaction/Transaction.cpp src/transaction/Transaction.h src/block/BlockHeaderBuilder.h include/CONSTANTS.h)
+        libs/sha256/SHA256.cpp libs/sha256/SHA256.h src/merkleTree/MerkleTree.cpp src/merkleTree/MerkleTree.h src/block/BlockHeader.cpp src/block/BlockHeader.h src/transaction/Transaction.cpp src/transaction/Transaction.h src/block/BlockHeaderBuilder.h include/CONSTANTS.h src/transaction/TransactionInput.cpp src/transaction/TransactionInput.h src/transaction/Script.cpp src/transaction/Script.h)
 
 target_link_libraries(psychic-garbanzo gmp gmpxx)
 
@@ -29,13 +29,13 @@ option(BUILD_TESTS "Build all tests." OFF) # Makes boolean 'test' available.
 if (BUILD_TESTS)
         enable_testing()
         add_executable(psychic-test test/functionsTest.cpp test/Sha256Test.cpp
-                src/functions.cpp
-                src/functions.h include/includes.h include/typedefs.h
+                src/HelperFunctions.cpp
+                src/HelperFunctions.h include/includes.h include/typedefs.h
                 src/playground/playground.h src/playground/playground.cpp
                 libs/sha256/SHA256.cpp libs/sha256/SHA256.h
                 src/merkleTree/MerkleTree.cpp src/merkleTree/MerkleTree.h
                 src/block/BlockHeader.cpp src/block/BlockHeader.h
-                src/transaction/Transaction.cpp src/transaction/Transaction.h test/MerkleTreeTest.cpp src/block/BlockHeaderBuilder.h test/BlockHeaderTest.cpp include/CONSTANTS.h test/BlockHeaderBuilderTest.cpp)
+                src/transaction/Transaction.cpp src/transaction/Transaction.h test/MerkleTreeTest.cpp src/block/BlockHeaderBuilder.h test/BlockHeaderTest.cpp include/CONSTANTS.h test/BlockHeaderBuilderTest.cpp src/transaction/TransactionInput.cpp src/transaction/TransactionInput.h src/transaction/Script.cpp src/transaction/Script.h)
         target_link_libraries(psychic-test gmp gmpxx)
         if (CMAKE_BUILD_TYPE STREQUAL "Coverage")
                 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/libs/codeCoverage")
