Added RIPEMD160 tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ if (BUILD_TESTS)
                 libs/sha256/SHA256.cpp libs/sha256/SHA256.h
                 src/merkleTree/MerkleTree.cpp src/merkleTree/MerkleTree.h
                 src/block/BlockHeader.cpp src/block/BlockHeader.h
-                src/transaction/Transaction.cpp src/transaction/Transaction.h test/MerkleTreeTest.cpp src/block/BlockHeaderBuilder.h test/BlockHeaderTest.cpp include/CONSTANTS.h test/BlockHeaderBuilderTest.cpp src/transaction/TransactionInput.cpp src/transaction/TransactionInput.h src/transaction/Script.cpp src/transaction/Script.h libs/ripemd160/Ripemd160.cpp libs/ripemd160/Ripemd160.h libs/ripemd160/Utils.cpp libs/ripemd160/Utils.h)
+                src/transaction/Transaction.cpp src/transaction/Transaction.h test/MerkleTreeTest.cpp src/block/BlockHeaderBuilder.h test/BlockHeaderTest.cpp include/CONSTANTS.h test/BlockHeaderBuilderTest.cpp src/transaction/TransactionInput.cpp src/transaction/TransactionInput.h src/transaction/Script.cpp src/transaction/Script.h libs/ripemd160/Ripemd160.cpp libs/ripemd160/Ripemd160.h libs/ripemd160/Utils.cpp libs/ripemd160/Utils.h test/Ripemd160Test.cpp)
         target_link_libraries(psychic-test gmp gmpxx)
         if (CMAKE_BUILD_TYPE STREQUAL "Coverage")
                 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/libs/codeCoverage")
